fixed spacing issue in carousel and app cards

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -125,9 +125,10 @@ ul {
 }
 .sd-custom-dot-list-style {
   margin-top: 25px;
+  opacity: 0.7;
 }
 .sd-carousel-container {
-  padding-bottom: 40px;
+  padding-bottom: 60px;
 }
 .text-gradient {
   background: linear-gradient(to right, #f9000f 20%, #f428c1 50%, #c246ff 70%, #12c2e9 100%);
